--- a/sass/_fourthSection.scss
+++ b/sass/_fourthSection.scss
@@ -22,7 +22,7 @@
         }
 
         &::before {
-            content: url(/img/bg-3\,.jpg);
+            content: url(./img/bg-3\,.jpg);
             position: absolute;
             bottom: -60px;
             right: -60px;
