--- a/sass/_firstSection.scss
+++ b/sass/_firstSection.scss
@@ -47,7 +47,7 @@
             }
 
             &::before {
-                content: url(./img/orandžinis\ rutuliukas.png);
+                content: url('./img/rutulys.png');
                 position: absolute;
                 left: 171px;
                 top: -28px;
